fly/walk navigation crash #82596

Closed
opened 2020-11-10 22:15:12 +01:00 by fred hopp · 19 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.06

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-09 22:42, hash: b5d310b569
Worked: Before 00374fbde2

Short description of error
switching to either walk or fly navigation crashes blender. Both with shortcut or Menu View/Navigation/Fly/Walk Navigation

Exact steps for others to reproduce the error

  • Delete the active camera in the scene
  • Use either walk or fly navigation
blender.exe         :0x00007FF600E4E770  ED_view3d_cameracontrol_acquire
blender.exe         :0x00007FF600E4CCF0  initWalkInfo
blender.exe         :0x00007FF600E4E560  walk_invoke
blender.exe         :0x00007FF6005FCD00  wm_operator_invoke
blender.exe         :0x00007FF6005FAB50  wm_handler_operator_call
blender.exe         :0x00007FF6005FC230  wm_handlers_do_keymap_with_keymap_handler
blender.exe         :0x00007FF6005FBAE0  wm_handlers_do_intern
blender.exe         :0x00007FF6005FB130  wm_handlers_do
blender.exe         :0x00007FF6005F86A0  wm_event_do_handlers
blender.exe         :0x00007FF6005E40E0  WM_main
blender.exe         :0x00007FF6002E98D0  main
blender.exe         :0x00007FF604753418  __scrt_common_main_seh
KERNEL32.DLL        :0x00007FF8EBCD7020  BaseThreadInitThunk
ntdll.dll           :0x00007FF8EC5BCEA0  RtlUserThreadStart
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.06 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-09 22:42, hash: `b5d310b569` Worked: Before 00374fbde2 **Short description of error** switching to either walk or fly navigation crashes blender. Both with shortcut or Menu View/Navigation/Fly/Walk Navigation **Exact steps for others to reproduce the error** - Delete the active camera in the scene - Use either walk or fly navigation ```lines blender.exe :0x00007FF600E4E770 ED_view3d_cameracontrol_acquire blender.exe :0x00007FF600E4CCF0 initWalkInfo blender.exe :0x00007FF600E4E560 walk_invoke blender.exe :0x00007FF6005FCD00 wm_operator_invoke blender.exe :0x00007FF6005FAB50 wm_handler_operator_call blender.exe :0x00007FF6005FC230 wm_handlers_do_keymap_with_keymap_handler blender.exe :0x00007FF6005FBAE0 wm_handlers_do_intern blender.exe :0x00007FF6005FB130 wm_handlers_do blender.exe :0x00007FF6005F86A0 wm_event_do_handlers blender.exe :0x00007FF6005E40E0 WM_main blender.exe :0x00007FF6002E98D0 main blender.exe :0x00007FF604753418 __scrt_common_main_seh KERNEL32.DLL :0x00007FF8EBCD7020 BaseThreadInitThunk ntdll.dll :0x00007FF8EC5BCEA0 RtlUserThreadStart ```
Author

Added subscriber: @fredhopp

Added subscriber: @fredhopp
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Cannot reproduce here

**System Information**
Operating system: Linux-5.8.18-300.fc33.x86_64-x86_64-with-fedora-33-Thirty_Three 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66
2.92.0 Alpha, branch: master, commit date: 2020-11-11 05:14, hash: `rB15ffda3bcd69`

Is this also an issue with Factory Defaults (File > Defaults > Load Factory Settings)?
Was this also an issue for you in previous versions? https://download.blender.org/release/
Could you provide crash logs? https://docs.blender.org/manual/en/dev/troubleshooting/crash.html

Cannot reproduce here ``` **System Information** Operating system: Linux-5.8.18-300.fc33.x86_64-x86_64-with-fedora-33-Thirty_Three 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66 2.92.0 Alpha, branch: master, commit date: 2020-11-11 05:14, hash: `rB15ffda3bcd69` ``` Is this also an issue with Factory Defaults (`File` > `Defaults` > `Load Factory Settings`)? Was this also an issue for you in previous versions? https://download.blender.org/release/ Could you provide crash logs? https://docs.blender.org/manual/en/dev/troubleshooting/crash.html

Added subscriber: @rjg

Added subscriber: @rjg

I can't reproduce on Windows either.

If this also doesn't work with factory defaults, as @lichtwerk suggested, please open Blender's installation directory and double click on the blender_debug_gpu.cmd. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them to your bug report by clicking on the upload button as shown in the screenshot below or via drag and drop. Please also upload the crash log [your project name].crash.txt located in C:\Users\[your username]\AppData\Local\Temp\ (or simply type %TEMP% into the path bar of the Windows Explorer).

2019_12_04_upload_icon_developer_blender_org.png

I can't reproduce on Windows either. If this also doesn't work with factory defaults, as @lichtwerk suggested, please open Blender's installation directory and double click on the `blender_debug_gpu.cmd`. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them to your bug report by clicking on the upload button as shown in the screenshot below or via drag and drop. Please also upload the crash log `[your project name].crash.txt` located in `C:\Users\[your username]\AppData\Local\Temp\` (or simply type `%TEMP%` into the path bar of the Windows Explorer). ![2019_12_04_upload_icon_developer_blender_org.png](https://archive.blender.org/developer/F8190038/2019_12_04_upload_icon_developer_blender_org.png)
Author

Robert, Philipp.
Thank you for looking into this.

  • Previous version 2.90.1 did not crash.
  • blender-2.92.0-b5d310b569e0 does NOT crash with default factory settings

Here are the crash files generate after starting blender 2.92.0 with "blender_debug_gpu.cmd"

Should I disable all add-ons and re-enable them one by one to see which one would cause the crash or would there be another reason besides add-ons for blender to crash?

Cheers
blender_debug_output.txt
blender_system_info.txt

Robert, Philipp. Thank you for looking into this. - Previous version 2.90.1 did not crash. - blender-2.92.0-b5d310b569e0 does NOT crash with default factory settings Here are the crash files generate after starting blender 2.92.0 with "blender_debug_gpu.cmd" Should I disable all add-ons and re-enable them one by one to see which one would cause the crash or would there be another reason besides add-ons for blender to crash? Cheers [blender_debug_output.txt](https://archive.blender.org/developer/F9261267/blender_debug_output.txt) [blender_system_info.txt](https://archive.blender.org/developer/F9261268/blender_system_info.txt)

@fredhopp Checking every add-on one by one is a good idea. Before you do that, could you please upload the crash log C:\Users\admin\AppData\Local\Temp\blender.crash.txt as well? This will likely tell us what went wrong.

@fredhopp Checking every add-on one by one is a good idea. Before you do that, could you please upload the crash log `C:\Users\admin\AppData\Local\Temp\blender.crash.txt` as well? This will likely tell us what went wrong.
Author

Thanks Robert.
I was looking for it in my current user folder, I did not think of checking in the admin user folder.
Here it is.
blender.crash.txt

Thanks Robert. I was looking for it in my current user folder, I did not think of checking in the admin user folder. Here it is. [blender.crash.txt](https://archive.blender.org/developer/F9261797/blender.crash.txt)

@fredhopp Thank you for checking. Unfortunately, it does only show that it crashes in the walk navigation code. Please check if a particular add-on causes this. If it is one of the add-ons shipped with Blender we will try to fix this, if it is a third-party add-on then this would have to be reported to the developer / company of the add-on.

@fredhopp Thank you for checking. Unfortunately, it does only show that it crashes in the walk navigation code. Please check if a particular add-on causes this. If it is one of the add-ons shipped with Blender we will try to fix this, if it is a third-party add-on then this would have to be reported to the developer / company of the add-on.

Added subscriber: @fiftysquid

Added subscriber: @fiftysquid

Also crashes for me with MacOS on beta b99faa0f56 and alpha bc090387ac with factory defaults and no add-ons but only after deleting the camera.

Also crashes for me with MacOS on beta b99faa0f567f and alpha bc090387ace9 with factory defaults and no add-ons but only after deleting the camera.
Author

Thanks fiftysquid.
"after deleting the camera." When reading this I realized that I was doing the fly/walk without a camera, expecting it to walk/fly the perspective just like in previous versions of blender.
I can confirm that it does NOT crash with a camera but only with perspective.

Thanks fiftysquid. "after deleting the camera." When reading this I realized that I was doing the fly/walk **without** a camera, expecting it to walk/fly the perspective just like in previous versions of blender. I can confirm that it does **NOT** crash with a camera but only with perspective.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

@fiftysquid Thank you for that tip. Without a camera is indeed the case were it crashes.

In ED_view3d_cameracontrol_acquire it attempts to access v3d->camera->transflag without checking if camera is NULL.

ED_view3d_cameracontrol_acquire(Depsgraph * depsgraph, Scene * scene, View3D * v3d, RegionView3D * rv3d) Lines 141	C
initFlyInfo(bContext * C, FlyInfo * fly, wmOperator * op, const wmEvent * event) Lines 394	C
fly_invoke(bContext * C, wmOperator * op, const wmEvent * event) Lines 1069	C
wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Lines 1288	C
wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Lines 1500	C
WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Lines 1549	C
ui_apply_but_funcs_after(bContext * C) Lines 930	C
ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Lines 10797	C
wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Lines 631	C
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Lines 2756	C
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Lines 2864	C
wm_event_do_handlers(bContext * C) Lines 3287	C
WM_main(bContext * C) Lines 638	C
main(int argc, const unsigned char * * UNUSED_argv_c) Lines 526	C
@fiftysquid Thank you for that tip. Without a camera is indeed the case were it crashes. In `ED_view3d_cameracontrol_acquire` it attempts to access `v3d->camera->transflag` without checking if `camera` is `NULL`. ``` ED_view3d_cameracontrol_acquire(Depsgraph * depsgraph, Scene * scene, View3D * v3d, RegionView3D * rv3d) Lines 141 C initFlyInfo(bContext * C, FlyInfo * fly, wmOperator * op, const wmEvent * event) Lines 394 C fly_invoke(bContext * C, wmOperator * op, const wmEvent * event) Lines 1069 C wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Lines 1288 C wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Lines 1500 C WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Lines 1549 C ui_apply_but_funcs_after(bContext * C) Lines 930 C ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Lines 10797 C wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Lines 631 C wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Lines 2756 C wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Lines 2864 C wm_event_do_handlers(bContext * C) Lines 3287 C WM_main(bContext * C) Lines 638 C main(int argc, const unsigned char * * UNUSED_argv_c) Lines 526 C ```

This bug was introduced in 00374fbde2 @HooglyBoogly

This bug was introduced in 00374fbde2 @HooglyBoogly

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly

This issue was referenced by cd49afc596

This issue was referenced by cd49afc596a0b24ce9e0045afb03906aca481b9a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2020-11-12 23:07:15 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82596
No description provided.